9.2.16.alpha.1 - 17th June 2022
- The '/ltp id' command now works differently.  Hover over something that has a tooltip and enter '/ltp id'.  If possible, the name and ID will be shown in chat and a Wowhead link will be shown in a copy-friendly window.  Works with items, spells, mounts, pets, talents, toys and more.

9.2.15 - 15th June 2022
- The 'Manage frames', 'Manage buffs', 'Manage power bar', 'Manage widget top', 'Manage widget power', 'Manage focus' and 'Manage control' settings ('Frames') now show a frame alignment grid when moving the frames (there is a button in each configuration panel to toggle the grid).  You can now drag the frames with the left button to position them freely or with the right button to position them using snap-to-grid.

9.2.14 - 8th June 2022
- Fixed an issue with 'Disable bag automation' ('System') which sometimes caused a taint error when sending mail.

9.2.13 - 1st June 2022
- Updated for game version 9.2.5.
- For 'Mute game sounds' ('System'), the 'Mechstriders' and 'Mechsuits' settings will no longer mute footstep sounds.  There is a new setting called 'Mechsteps' that will mute footstep sounds for mechanical mounts.
- Added cinematics 'Arbiter Pelagos' and 'Eternity's End' (you can watch them in Movies > Shadowlands and listen to them in Various > Cinematics).

9.2.12 - 25th May 2022
- Added a new option 'Show ready timer' ('Interface').  If checked, a timer will be shown under the dungeon ready frame and the PvP encounter ready frame so that you know how long you have left to click the enter button.

9.2.11 - 18th May 2022
- Added a little Tazavesh: Myza's Oasis helper.  When you pick up the goods, enter /ltp tz.  The command to target the required NPC for the goods that you have will be shown in a copy-friendly window.  Press CTRL/C to copy the command and paste it into chat.

9.2.10 - 12th May 2022